@@ -1,3 +1,7 @@
+2016-08-16  Edward Jones  <ed.jones@embecosm.com>
+
+	* Driver.cpp: Add 'gather' functionality to the driver
+
 2016-08-15  Edward Jones  <ed.jones@embecosm.com>
 
 	Added a GCC wrapper driver
